kubernetes/apps/observability/kubernetes-dashboard/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: observability
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "kubernetes.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
